--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     {
         console.log(response.data)
         ShowExpenseOnScreen(response.data.expense);
-        getExpenses(currentPage);
+        //getExpenses(currentPage);
         
     }
     else{
