NO SQL complete showdown

--- a/public/forgotpassword.html
+++ b/public/forgotpassword.html
@@ -26,7 +26,7 @@
             email:e.target.email.value
           }
 
-          await axios.post("http://35.154.29.238:3004/password/forgotpassword",userdetail).then(response => {
+          await axios.post("http://localhost:3004/password/forgotpassword",userdetail).then(response => {
         if(response.status === 201){
             document.body.innerHTML += '<div style="color:red;">Mail Successfuly sent <div>'
         } else {
